Finished Student and Lecturer List to add and marks details